generated/checkers/gen/AllGen-Uninit-Data-d313eb8b77557a6d5855f42d2234bd592c7b50dd/build_logs/syntax-repair-07/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isZeroBraceInit(const clang::InitListExpr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:108:26: error: ‘class llvm::APInt’ has no member named ‘isNullValue’
  108 |       if (IL->getValue().isNullValue())
      |                          ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:284:55: error: ‘class llvm::APSInt’ has no member named ‘isNullValue’
  284 |     if (!ValE || !EvaluateExprToInt(V, ValE, C) || !V.isNullValue())
      |                                                       ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:210:6: warning: ‘void {anonymous}::SAGenTestChecker::markPartiallyInit(clang::ento::ProgramStateRef&, const clang::VarDecl*) const’ defined but not used [-Wunused-function]
  210 | void SAGenTestChecker::markPartiallyInit(ProgramStateRef &State, const VarDecl *VD) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:204:6: warning: ‘void {anonymous}::SAGenTestChecker::markZeroCleared(clang::ento::ProgramStateRef&, const clang::VarDecl*) const’ defined but not used [-Wunused-function]
  204 | void SAGenTestChecker::markZeroCleared(ProgramStateRef &State, const VarDecl *VD) const {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
